- fixed missing advantage on Wild Master eagles pack tactics
- improved some group descriptions to list feat names within them