@@ -1,2 +1,3 @@
-- fixed missing advantage on Wild Master eagles pack tactics
-- improved some group descriptions to list feat names within them
+- added Call for Charge feat
+- fixed missing advantage on Wild Master eagle pack tactics
+- improved group descriptions to list feat names within them
